--- a/index.html
+++ b/index.html
@@ -1,146 +1,133 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
-  <meta charset="utf-8">
-
-  <title>X-Team - Home</title>
-  <meta property="st:title" content="Home" />
-  <meta name="viewport" content="width=device-width, initial-scale=1">
-
-
-
-  <link rel="stylesheet" href="/css/syntax.css" type="text/css" />
-  <!--[if lte IE 7 ]>
-    <link rel="stylesheet" href="/css/fonts/fontello-ie7.css" type="text/css" />
-    <![endif]-->
-  <link rel="stylesheet" href="/css/application.css" type="text/css" />
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Amit | Particle Physics Researcher</title>
+  <style>
+    body {
+      font-family: Arial, Helvetica, sans-serif;
+      line-height: 1.6;
+      margin: 0;
+      padding: 0;
+      color: #222;
+      background: #fafafa;
+    }
+    header {
+      background: #0b3c5d;
+      color: #fff;
+      padding: 2.5rem 1rem;
+    }
+    header h1 {
+      margin: 0;
+      font-size: 2.2rem;
+    }
+    header p {
+      margin-top: 0.5rem;
+      font-size: 1.1rem;
+    }
+    nav {
+      background: #e6e6e6;
+      padding: 0.5rem 1rem;
+    }
+    nav a {
+      margin-right: 1rem;
+      text-decoration: none;
+      color: #0b3c5d;
+      font-weight: bold;
+    }
+    section {
+      max-width: 900px;
+      margin: 2rem auto;
+      padding: 0 1rem;
+    }
+    h2 {
+      border-bottom: 2px solid #ddd;
+      padding-bottom: 0.3rem;
+      color: #0b3c5d;
+    }
+    ul {
+      padding-left: 1.2rem;
+    }
+    footer {
+      text-align: center;
+      padding: 1.5rem 1rem;
+      background: #0b3c5d;
+      color: #fff;
+      margin-top: 3rem;
+      font-size: 0.9rem;
+    }
+    .small {
+      font-size: 0.9rem;
+      color: #555;
+    }
+  </style>
 </head>
-
 <body>
 
-  <!--[if lt IE 9]>
-      <script type="text/javascript" src="/js/vendor/jquery-1.11.2.min.js"></script>
-    <![endif]-->
-  <!--[if gte IE 9]><!-->
-  <script type="text/javascript" src="/js/vendor/jquery-2.1.3.min.js"></script>
-  <!--<![endif]-->
+<header>
+  <h1>Amit</h1>
+  <p>Experimental Particle Physicist | BESIII Collaboration</p>
+</header>
 
-  <script type="text/javascript" src="/js/toc.js"></script>
+<nav>
+  <a href="#about">About</a>
+  <a href="#research">Research</a>
+  <a href="#publications">Publications</a>
+  <a href="#talks">Talks</a>
+  <a href="#contact">Contact</a>
+</nav>
 
-  <header class="header">
-    <nav role="navigation" aria-label="main">
-      <ul class="header-nav container">
-        <li class="header-logo">
-          <a href="/"><span class="visually-hidden">X&#8209Team</span></a>
-        </li>
-        <li>
-          <a href="/docs/">Documents</a>
-        </li>
-        <li>
-          <a href="/members/">Members</a>
-        </li>
-        <li>
-          <a href="/news/">News</a>
-        </li>
-        <li>
-          <a href="/research/">Research</a>
-        </li>
-      </ul>
-    </nav>
-  </header>
+<section id="about">
+  <h2>About Me</h2>
+  <p>
+    I am an experimental particle physicist working on electron–positron collider data from the BESIII experiment at BEPCII, IHEP (Beijing).
+    My research focuses on searches for physics beyond the Standard Model using charmonium decays, invisible final states, and rare baryon processes.
+  </p>
+  <p>
+    I am currently affiliated with Chung-Ang University, Seoul, and collaborate closely with international groups within the BESIII collaboration.
+  </p>
+</section>
 
+<section id="research">
+  <h2>Research Interests</h2>
+  <ul>
+    <li>Searches for dark matter and invisible decays at <i>e<sup>+</sup>e<sup>−</sup></i> colliders</li>
+    <li>Charmonium and bottomonium decays</li>
+    <li>Heavy Neutral Leptons and neutrino portals</li>
+    <li>Baryon number violation and exotic baryon decays</li>
+    <li>Statistical analysis, maximum-likelihood fitting, and machine learning in HEP</li>
+  </ul>
+</section>
 
-  <main class="container">
-    <aside class="sidebar">
-      <input id="toc-toggle" class="toc-toggle visually-hidden" type="checkbox" />
-      <label for="toc-toggle">Table of Contents <span class="visually-hidden">toggle</span></label>
+<section id="publications">
+  <h2>Selected Publications</h2>
+  <ul>
+    <li>BESIII Collaboration, <i>Search for Invisible Decays of J/ψ</i>, Phys. Rev. D (year).</li>
+    <li>BESIII Collaboration, <i>Search for Exotic Baryon Processes</i>, Phys. Lett. B (year).</li>
+  </ul>
+  <p class="small">A complete list of publications is available on INSPIRE-HEP.</p>
+</section>
 
-      <nav class="toc-container" aria-label="table of contents">
-        <ol class="toc-level-0 selected">
+<section id="talks">
+  <h2>Talks & Conferences</h2>
+  <ul>
+    <li>BARYON 2025, Jeju, South Korea</li>
+    <li>Korean Physical Society Fall Meeting 2025</li>
+    <li>BESIII New Physics Group meetings</li>
+  </ul>
+</section>
 
+<section id="contact">
+  <h2>Contact</h2>
+  <p>Email: <a href="mailto:your.email@university.edu">your.email@university.edu</a></p>
+  <p>INSPIRE-HEP: <a href="#">https://inspirehep.net</a></p>
+  <p>GitHub: <a href="#">https://github.com/yourusername</a></p>
+</section>
 
-          <li class="toc-level-0">
-            <a href="#">X-Team</a>
-
-            <ol class="toc-level-1 selected">
-
-              <li class="toc-level-1 selected">
-                <a>Welcome</a>
-              </li>
-
-
-              <li class="toc-level-1">
-                <a href="/docs/">Documents</a>
-              </li>
-
-
-              <li class="toc-level-1">
-                <a href="/members/">Members</a>
-              </li>
-
-
-              <li class="toc-level-1">
-                <a href="/news/">News</a>
-              </li>
-
-              <li class="toc-level-1">
-                <a href="/research/">Research</a>
-              </li>
-
-
-            </ol>
-          </li>
-
-        </ol>
-
-      </nav>
-
-      <a href="#" class="back-to-top">&#11014; Back to Top</a>
-    </aside>
-
-
-    <article class="chapter">
-      <h1>
-        Welcome to X-Team!
-
-      </h1>
-      <hr>
-
-
-      <div class="content">
-        <p>What is the world made of? This is a fundamental question for human being. </p>
-
-        <p>As particle physicist, we want to find out the answers by building colliders and particle detectors.</p>
-
-        <p>The new physics beyond the Standard Model might have connection to cosmology such as dark matter.</p>
-
-        <p>In X-Team, our goal is to build modern detector to search for new physics.</p>
-
-        <p> To join us for this exciting journey, feel free to contact any team <a href="/members/">members</a>!</p>
-
-        <p><img src="/images/gp_20180726.jpg" width="400" /></p>
-
-      </div>
-
-
-
-
-
-    </article>
-
-
-  </main>
-
-
-  <div class="footer">
-    <div class="container">
-      <div class="footer-info">
-        &copy; 2018-2019 XTEAM.IHEP.AC.CN
-      </div>
-    </div>
-  </div>
+<footer>
+  © 2025 Amit. All rights reserved.
+</footer>
 
 </body>
-
 </html>
