--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
     My research focuses on searches for physics beyond the Standard Model using charmonium decays, invisible final states, and rare baryon processes.
   </p>
   <p>
-    I am currently affiliated with Chung-Ang University, Seoul, and collaborate closely with international groups within the BESIII collaboration.
+    I am currently a graduate student and affiliated with Chung-Ang University, Seoul, and collaborate closely with international groups within the BESIII collaboration.
   </p>
 </section>
 
@@ -104,9 +104,9 @@
   <h2>Selected Publications</h2>
   <ul>
     <li>BESIII Collaboration, <i>Search for Invisible Decays of J/ψ</i>, Phys. Rev. D (year).</li>
-    <li>BESIII Collaboration, <i>Search for Exotic Baryon Processes</i>, Phys. Lett. B (year).</li>
+    <!-- <li>BESIII Collaboration, <i>Search for Exotic Baryon Processes</i>, Phys. Lett. B (year).</li> -->
   </ul>
-  <p class="small">A complete list of publications is available on INSPIRE-HEP.</p>
+  <!-- <p class="small">A complete list of publications is available on INSPIRE-HEP.</p> -->
 </section>
 
 <section id="talks">
@@ -114,15 +114,16 @@
   <ul>
     <li>BARYON 2025, Jeju, South Korea</li>
     <li>Korean Physical Society Fall Meeting 2025</li>
+    <li>Flavour Physics Conference, Vietnam</li>
     <li>BESIII New Physics Group meetings</li>
   </ul>
 </section>
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>Email: <a href="mailto:your.email@university.edu">your.email@university.edu</a></p>
+  <p>Email: <a href="mailto:amitraahul@cau.ac.kr">amitraahul@cau.ac.kr</a></p>
   <p>INSPIRE-HEP: <a href="#">https://inspirehep.net</a></p>
-  <p>GitHub: <a href="#">https://github.com/yourusername</a></p>
+  <p>GitHub: <a href="#">https://github.com/amitraahul</a></p>
 </section>
 
 <footer>
