Revise personal details and update contact links
Updated personal information and links in the index.html file.

--- a/index.html
+++ b/index.html
@@ -70,6 +70,13 @@
   <p>Experimental Particle Physicist | BESIII Collaboration</p>
 </header>
 
+<section style="max-width:900px;margin:2rem auto;padding:0 1rem;display:flex;gap:2rem;align-items:flex-start;">
+  <div style="flex:0 0 200px;">
+    <img src="AMIT_PATHAK.jpg" alt="Amit profile photo" style="width:200px;border-radius:6px;" />
+    <p style="margin-top:1rem;"><a href="Amit_Pathak_CV.pdf" target="_blank"><strong>Download CV (PDF)</strong></a></p>
+  </div>
+  <div style="flex:1;">
+
 <nav>
   <a href="#about">About</a>
   <a href="#research">Research</a>
@@ -85,8 +92,9 @@
     My research focuses on searches for physics beyond the Standard Model using charmonium decays, invisible final states, and rare baryon processes.
   </p>
   <p>
-    I am currently a graduate student and affiliated with Chung-Ang University, Seoul, and collaborate closely with international groups within the BESIII collaboration.
+    I am currently affiliated with Chung-Ang University, Seoul, and collaborate closely with international groups within the BESIII collaboration.
   </p>
+</div>
 </section>
 
 <section id="research">
@@ -104,9 +112,9 @@
   <h2>Selected Publications</h2>
   <ul>
     <li>BESIII Collaboration, <i>Search for Invisible Decays of J/ψ</i>, Phys. Rev. D (year).</li>
-    <!-- <li>BESIII Collaboration, <i>Search for Exotic Baryon Processes</i>, Phys. Lett. B (year).</li> -->
+    <li>BESIII Collaboration, <i>Search for Exotic Baryon Processes</i>, Phys. Lett. B (year).</li>
   </ul>
-  <!-- <p class="small">A complete list of publications is available on INSPIRE-HEP.</p> -->
+  <p class="small">A complete list of publications is available on INSPIRE-HEP.</p>
 </section>
 
 <section id="talks">
@@ -114,16 +122,15 @@
   <ul>
     <li>BARYON 2025, Jeju, South Korea</li>
     <li>Korean Physical Society Fall Meeting 2025</li>
-    <li>Flavour Physics Conference, Vietnam</li>
     <li>BESIII New Physics Group meetings</li>
   </ul>
 </section>
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>Email: <a href="mailto:amitraahul@cau.ac.kr">amitraahul@cau.ac.kr</a></p>
+  <p>Email: <a href="mailto:your.email@university.edu">your.email@university.edu</a></p>
   <p>INSPIRE-HEP: <a href="#">https://inspirehep.net</a></p>
-  <p>GitHub: <a href="#">https://github.com/amitraahul</a></p>
+  <p>GitHub: <a href="#">https://github.com/yourusername</a></p>
 </section>
 
 <footer>
