Update personal information and publications in index.html

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
     My research focuses on searches for physics beyond the Standard Model using charmonium decays, invisible final states, and rare baryon processes.
   </p>
   <p>
-    I am currently affiliated with Chung-Ang University, Seoul, and collaborate closely with international groups within the BESIII collaboration.
+    I am currently affiliated with Chung-Ang University, Seoul, as a graduate student and collaborate closely with international groups within the BESIII collaboration.
   </p>
 </div>
 </section>
@@ -102,8 +102,8 @@
   <ul>
     <li>Searches for dark matter and invisible decays at <i>e<sup>+</sup>e<sup>−</sup></i> colliders</li>
     <li>Charmonium and bottomonium decays</li>
-    <li>Heavy Neutral Leptons and neutrino portals</li>
-    <li>Baryon number violation and exotic baryon decays</li>
+    <!-- <li>Heavy Neutral Leptons and neutrino portals</li> -->
+    <!-- <li>Baryon number violation and exotic baryon decays</li> -->
     <li>Statistical analysis, maximum-likelihood fitting, and machine learning in HEP</li>
   </ul>
 </section>
@@ -112,7 +112,7 @@
   <h2>Selected Publications</h2>
   <ul>
     <li>BESIII Collaboration, <i>Search for Invisible Decays of J/ψ</i>, Phys. Rev. D (year).</li>
-    <li>BESIII Collaboration, <i>Search for Exotic Baryon Processes</i>, Phys. Lett. B (year).</li>
+    <!-- <li>BESIII Collaboration, <i>Search for Exotic Baryon Processes</i>, Phys. Lett. B (year).</li> -->
   </ul>
   <p class="small">A complete list of publications is available on INSPIRE-HEP.</p>
 </section>
@@ -122,15 +122,16 @@
   <ul>
     <li>BARYON 2025, Jeju, South Korea</li>
     <li>Korean Physical Society Fall Meeting 2025</li>
+    <li>Invited talk in Vietnam Flavour Physics Conference 2022</li>
     <li>BESIII New Physics Group meetings</li>
   </ul>
 </section>
 
 <section id="contact">
   <h2>Contact</h2>
-  <p>Email: <a href="mailto:your.email@university.edu">your.email@university.edu</a></p>
+  <p>Email: <a href="mailto:amitraahul@cau.ac.kr">amitraahul@cau.ac.kr</a></p>
   <p>INSPIRE-HEP: <a href="#">https://inspirehep.net</a></p>
-  <p>GitHub: <a href="#">https://github.com/yourusername</a></p>
+  <p>GitHub: <a href="#">https://github.com/amitraahul</a></p>
 </section>
 
 <footer>
