Inspire ID is updated

--- a/index.html
+++ b/index.html
@@ -112,7 +112,6 @@
   <h2>Selected Publications</h2>
   <ul>
     <li>BESIII Collaboration, <i>Search for Invisible Decays of J/ψ</i>, Phys. Rev. D (year).</li>
-    <!-- <li>BESIII Collaboration, <i>Search for Exotic Baryon Processes</i>, Phys. Lett. B (year).</li> -->
   </ul>
   <p class="small">A complete list of publications is available on INSPIRE-HEP.</p>
 </section>
@@ -130,7 +129,7 @@
 <section id="contact">
   <h2>Contact</h2>
   <p>Email: <a href="mailto:amitraahul@cau.ac.kr">amitraahul@cau.ac.kr</a></p>
-  <p>INSPIRE-HEP: <a href="#">https://inspirehep.net</a></p>
+  <p>INSPIRE-HEP: <a href="#">https://inspirehep.net/authors/3097308</a></p>
   <p>GitHub: <a href="#">https://github.com/amitraahul</a></p>
 </section>
 
